[gd_scene load_steps=9 format=2]

[ext_resource path="res://Art/thing.png" type="Texture" id=1]
[ext_resource path="res://Enemies/EnemyBoss.gd" type="Script" id=2]
[ext_resource path="res://World/light.png" type="Texture" id=3]
[ext_resource path="res://Sound/explosion.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 29, 29 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 32 )

[sub_resource type="Animation" id=3]
resource_name = "LightFade"
tracks/0/type = "value"
tracks/0/path = NodePath("Light2D:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.764706, 0.0823529, 0.0823529, 1 ), Color( 0.764706, 0.0823529, 0.0823529, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Light2D:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.764706, 0.0823529, 0.0823529, 1 ) ]
}

[node name="EnemyBoss" type="KinematicBody2D" groups=["enemy"]]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -9.53674e-07, -9.53674e-07 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.94902, 0.235294, 0.235294, 1 )
scale = Vector2( 3.65, 3.65 )
texture = ExtResource( 1 )

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 2 )

[node name="Light2D" type="Light2D" parent="."]
scale = Vector2( 0.919109, 0.919109 )
texture = ExtResource( 3 )
color = Color( 0.764706, 0.0823529, 0.0823529, 1 )
shadow_enabled = true
shadow_item_cull_mask = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/LightFade = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="ExplosionSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="ShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="StateTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="ShootCooldown" type="Timer" parent="."]

[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="timeout" from="StateTimer" to="." method="_on_StateTimer_timeout"]
[connection signal="timeout" from="ShootCooldown" to="." method="_on_ShootCooldown_timeout"]
